--- a/home.html
+++ b/home.html
@@ -69,26 +69,10 @@
         <div class="list">
             <h2 id="i1">シナリオ一覧</h2>
             <ul>
-                <li><a href="kurenai.html">紅の幻想</a></li>
+                <li><a href="Kurenai.html">紅の幻想</a></li>
                 <li><a href="#">ハロウィンワンナイトクルーズ</a></li>
                 <li><a href="#">はらぺこあおむし</a></li>
-                <li><a href="#">Life goes on</a></li>
-                <li><a href="#">なつまつり</a></li>
-                <li><a href="#">n回目の初演</a></li>
-                <li><a href="#">コマドリの葬列</a></li>
-                <li><a href="#">スモーキンバラッド</a></li>
-                <li><a href="#">わたしのかわいいハーメルン</a></li>
-                <li><a href="#">祝祭</a></li>
-                <li><a href="#">殺人　趣味レーター</a></li>
-                <li><a href="#">英雄たちのフェルンウェー</a></li>
-                <li><a href="#">貴方は私を二度殺すのね</a></li>
-                <li><a href="#">太古の座敷牢</a></li>
-                <li><a href="#">その髄に君を呼ぶ</a></li>
-                <li><a href="#">遊園地は死で遊ぶ</a></li>
-                <li><a href="#">デッドレックエンコード</a></li>
-                <li><a href="#">white room-矛盾本能-</a></li>
-                <li><a href="#">私、友蔵の孫の友人です。</a></li>
-                <li><a href="#">混沌を運ぶ者</a></li>
+                <li><a href="Hatenite.html">果てにて</a></li>
             </ul>
         </div>
 
@@ -104,7 +88,7 @@
             <div class="member-list">
               <h3 id="i2m">管理人</h3>
               <ul>
-                <li><a href="nefrit.html">ニーフリット</a></li>
+                <li><a href="Nefrit.html">ニーフリット</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
               </ul>
