--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
                 <li><a href="Kurenai.html">紅の幻想</a></li>
                 <li><a href="#">ハロウィンワンナイトクルーズ</a></li>
                 <li><a href="#">はらぺこあおむし</a></li>
-                <li><a href="Hatenite.html">果てにて</a></li>
+                <li><a href="scenario/Hatenite.html">果てにて</a></li>
             </ul>
         </div>
 
