--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         <div class="list">
             <h2 id="i1">シナリオ一覧</h2>
             <ul>
-                <li><a href="Kurenai.html">紅の幻想</a></li>
+                <li><a href="scenario/Kurenai.html">紅の幻想</a></li>
                 <li><a href="#">ハロウィンワンナイトクルーズ</a></li>
                 <li><a href="#">はらぺこあおむし</a></li>
                 <li><a href="scenario/Hatenite.html">果てにて</a></li>
