--- a/scenario/Kurenai.html
+++ b/scenario/Kurenai.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="hitorigototaku/home.css">
+    <link rel="stylesheet" href="/home.css">
   </head>
   <body>
 
