--- a/character/manager/Nefrit.html
+++ b/character/manager/Nefrit.html
@@ -5,41 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ニーフリット/独り言卓INDEX</title>
     
-    <link rel="apple-touch-icon" sizes="180x180" href="https://renaruna.github.io/hitorigototaku/apple-touch-icon.png">
-    <link rel="shortcut icon" href="https://renaruna.github.io/hitorigototaku/favicon.ico">
-    <link rel="icon" type="image/png" href="https://renaruna.github.io/hitorigototaku/android-chrome-256x256.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+    <link rel="shortcut icon" href="../../favicon.ico">
+    <link rel="icon" type="image/png" href="../../android-chrome-256x256.png">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     
-    <script type="text/javascript" src="https://renaruna.github.io/hitorigototaku/animation.js"></script>
+    <script type="text/javascript" src="../../animation.js"></script>
    
-    <link rel="stylesheet" href="https://renaruna.github.io/hitorigototaku/home.css">
+    <link rel="stylesheet" href="../../home.css">
   </head>
   <body>
 
     <header>
         <div class="header-container">
             <div class="header-left">
-                <img class="logo" src="https://renaruna.github.io/hitorigototaku/header-logo1.gif">
+                <img class="logo" src="../../header-logo1.gif">
             </div>
             <div class="menu">
                 <span class="fa fa-bars menu-icon front"></span>
                 <span class="fa fa-bars menu-icon back"></span>
                 <div class="home-index">
                   <ul>
-                    <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i1">シナリオ一覧</a></li>
-                    <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i2">キャラクター一覧</a></li>
+                    <li><a href="../../home.html#i1">シナリオ一覧</a></li>
+                    <li><a href="../../home.html#i2">キャラクター一覧</a></li>
                        <ul class="li2">
-                          <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i2d">運転手</a></li>
-                          <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i2m">管理人</a></li>
-                          <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i2b">上司</a></li>
-                          <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i2s">スピリチュアルな存在。</a></li>
-                          <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i2w">戦犯</a></li>
-                          <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i2c">創造主</a></li>
+                          <li><a href="../../home.html#i2d">運転手</a></li>
+                          <li><a href="../../home.html#i2m">管理人</a></li>
+                          <li><a href="../../home.html#i2b">上司</a></li>
+                          <li><a href="../../home.html#i2s">スピリチュアルな存在。</a></li>
+                          <li><a href="../../home.html#i2w">戦犯</a></li>
+                          <li><a href="../../home.html#i2c">創造主</a></li>
                        </ul>
-                    <li><a href="https://renaruna.github.io/hitorigototaku/home.html#i3">独り言卓メンバー一覧</a></li>
+                    <li><a href="../../home.html#i3">独り言卓メンバー一覧</a></li>
                   </ul>
                 </div>
             </div>
@@ -153,7 +153,7 @@
 
     <footer>
       <div>
-        <img class="footer-logo" src="https://renaruna.github.io/hitorigototaku/footer-logo1.gif">
+        <img class="footer-logo" src="../../footer-logo1.gif">
       </div>
     </footer>
 
