--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
             <div class="member-list">
               <h3 id="i2m">管理人</h3>
               <ul>
-                <li><a href="Nefrit.html">ニーフリット</a></li>
+                <li><a href="character/manager/Nefrit.html">ニーフリット</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
               </ul>
@@ -127,38 +127,38 @@
           <h2 id="i3">独り言卓メンバー一覧</h2>
           <div class="mems">
             <div class="mem">
-              <a href="driver.html">
-                <img src="driver.png">
+              <a href="member/driver.html">
+                <img src="member/driver.png">
                 <p>運転手</p>
               </a>
             </div>
             <div class="mem">
-              <a href="manager.html">
-                <img src="manager.png">
+              <a href="member/manager.html">
+                <img src="member/manager.png">
                 <p>管理人</p>
               </a>
             </div>
             <div class="mem">
-              <a href="boss.html">
-                <img src="boss.png">
+              <a href="member/boss.html">
+                <img src="member/boss.png">
                 <p>上司</p>
               </a>
             </div>
             <div class="mem">
-              <a href="spritual.html">
-                <img src="spiritual.png">
+              <a href="member/spritual.html">
+                <img src="member/spiritual.png">
                 <p>スピリチュアルな存在。</p>
               </a>
             </div>
             <div class="mem">
-              <a href="warcrim.html">
-                <img src="warcrim.png">
+              <a href="member/warcrim.html">
+                <img src="member/warcrim.png">
                 <p>戦犯</p>
               </a>
             </div>
             <div class="mem">
-              <a href="creator.html">
-                <img src="creator.png">
+              <a href="member/creator.html">
+                <img src="member/creator.png">
                 <p>創造主</p>
               </a>
             </div>
@@ -174,6 +174,6 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="character.js"></script>
+    <script type="text/javascript" src="animation.js"></script>
   </body>
 </html>
