--- a/home.html
+++ b/home.html
@@ -80,10 +80,8 @@
           <h2 id="i2">キャラクター一覧</h2>
             <div class="member-list">
               <h3 id="i2d">運転手</h3>
-              <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-              </ul>
+              <div id="i2d-list">
+              </div>
             </div>
             <div class="member-list">
               <h3 id="i2m">管理人</h3>
