--- a/home.html
+++ b/home.html
@@ -173,5 +173,6 @@
     </footer>
 
     <script type="text/javascript" src="animation.js"></script>
+    <script type="text/javascript" src="home.js"></script>
   </body>
 </html>
