--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
           <h2 id="i2">キャラクター一覧</h2>
             <div class="member-list">
               <h3 id="i2d">運転手</h3>
-              <div id="i2d-list">
+              <div class="mems" id="i2d-list">
               </div>
             </div>
             <div class="member-list">
