--- a/member/manager.html
+++ b/member/manager.html
@@ -57,8 +57,7 @@
         <p>Twitter：<a href="https://twitter.com/nefrit_john">twitter.com/nefrit_john</a></p>
         <p>ふせったー：<a href="https://fusetter.com/u/nefrit_john">fusetter.com/u/nefrit_john</a></p>
         <p>poipiku：<a href="https://poipiku.com/4908609/">poipiku.com/4908609/</a></p>
-        <p></p>
-        <p>うわああああああああああああああああああああああああああああああああああああああああああい</p>
+        <p class="comment">うわああああああああああああああああああああああああああああああああああああああああああい</p>
         
         <div class="managerColor">
             <h3 class="memberLeft">メンバーカラー</h3>
