--- a/home.html
+++ b/home.html
@@ -84,39 +84,28 @@
             </div>
             <div class="member-list">
               <h3 id="i2m">管理人</h3>
-              <ul>
-                <li><a href="character/manager/Nefrit.html">ニーフリット</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-              </ul>
+              <div class="mems" id="i2m-list">
+              </div>
             </div>
             <div class="member-list">
               <h3 id="i2b">上司</h3>
-              <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-              </ul>
+              <div class="mems" id="i2b-list">
+              </div>
             </div>
             <div class="member-list">
               <h3 id="i2s">スピリチュアルな存在。</h3>
-              <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-              </ul>
+              <div class="mems" id="i2s-list">
+              </div>
             </div>
             <div class="member-list">
               <h3 id="i2w">戦犯</h3>
-              <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-              </ul>
+              <div class="mems" id="i2w-list">
+              </div>
             </div>
             <div class="member-list">
               <h3 id="i2c">創造主</h3>
-              <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-              </ul>
+              <div class="mems" id="i2c-list">
+              </div>
             </div>
         </div>
         
