--- a/character/manager/Nefrit.html
+++ b/character/manager/Nefrit.html
@@ -111,11 +111,11 @@
         <tr>
             <th>ステータス</th>
             <td>
-              <div class="item">
-                <p>HP：<label id="hp">____<label></p>
-                <p>MP：<label id="mp">____<label></p>
+              <div class="item status">
+                <p> HP：<label id="hp">____<label></p>
+                <p> MP：<label id="mp">____<label></p>
                 <p>SAN：<label id="san">____<label></p>
-                <p>DB：<label id="db">____<label></p>
+                <p> DB：<label id="db">____<label></p>
                 <p>STR：<label id="str">____<label></p>
                 <p>CON：<label id="con">____<label></p>
                 <p>POW：<label id="pow">____<label></p>
