--- a/home.html
+++ b/home.html
@@ -73,6 +73,8 @@
                 <li><a href="#">はらぺこあおむし</a></li>
                 <li><a href="scenario/Hatenite.html">果てにて</a></li>
             </ul>
+            <div id="scenario-list">
+            </div>
         </div>
 
         <div class="list">
