--- a/member/manager.html
+++ b/member/manager.html
@@ -20,7 +20,7 @@
     <header>
         <div class="header-container">
             <div class="header-left">
-                <img class="logo" src="../header-logo1.gif">
+              <a href="../home.html"><img class="logo" src="../header-logo1.gif"></a>
             </div>
             <div class="menu">
                 <span class="fa fa-bars menu-icon front"></span>
@@ -53,7 +53,7 @@
 
     <!-- メンバーシート -->
     <div class="items member">
-        <img id="manager-icon" src="manager.png">
+        <img class="member-icon" src="manager.png">
         <p>Twitter：<a href="https://twitter.com/nefrit_john">twitter.com/nefrit_john</a></p>
         <p>ふせったー：<a href="https://fusetter.com/u/nefrit_john">fusetter.com/u/nefrit_john</a></p>
         <p>poipiku：<a href="https://poipiku.com/4908609/">poipiku.com/4908609/</a></p>
