--- a/member/boss.html
+++ b/member/boss.html
@@ -53,7 +53,7 @@
 
     <!-- メンバーシート -->
     <div class="items member">
-        <img id="boss-icon" src="boss.png">
+        <img class="member-icon" src="boss.png">
         <p>Twitter：<a href=""></a></p>
         <p class="comment"></p>
         
