--- a/member/driver.html
+++ b/member/driver.html
@@ -53,7 +53,7 @@
 
     <!-- メンバーシート -->
     <div class="items member">
-        <img id="driver-icon" src="driver.png">
+        <img class="member-icon" src="driver.png">
         <p>Twitter：<a href=""></a></p>
         <p class="comment"></p>
         
