--- a/member/boss.html
+++ b/member/boss.html
@@ -55,6 +55,7 @@
     <div class="items member">
         <img class="member-icon" src="boss.png">
         <p>Twitter：<a href=""></a></p>
+        <p>ふせったー：<a href=""></a></p>
         <p class="comment"></p>
         
         <div class="bossColor">
