--- a/member/manager.html
+++ b/member/manager.html
@@ -74,7 +74,7 @@
       
         <div class="scenario-index">
             <h3 class="memberLeft">PLとして参加したシナリオ</h3>
-            <div id="charaPl">
+            <div id="charaPl" class="mems">
             </div>
         </div>
     </div>
