--- a/character/manager/Nefrit.html
+++ b/character/manager/Nefrit.html
@@ -22,7 +22,7 @@
     <header>
         <div class="header-container">
             <div class="header-left">
-                <img class="logo" src="../../header-logo1.gif">
+                <a href="../../home.html"><img class="logo" src="../../header-logo1.gif"></a>
             </div>
             <div class="menu">
                 <span class="fa fa-bars menu-icon front"></span>
