--- a/scenario/Kurenai.html
+++ b/scenario/Kurenai.html
@@ -20,7 +20,7 @@
     <header>
         <div class="header-container">
             <div class="header-left">
-                <img class="logo" src="../header-logo1.gif">
+                <a href="../home.html"><img class="logo" src="../header-logo1.gif"></a>
             </div>
             <div class="menu">
                 <span class="fa fa-bars menu-icon front"></span>
