--- a/home.html
+++ b/home.html
@@ -69,24 +69,24 @@
         <div class="list">
             <h2 id="i1">シナリオ一覧</h2>
             <div class="kasira-btn short-btn">
-              <p><a href="#i1-a">あ</a></p>
-              <p><a href="#i1-k">か</a></p>
-              <p><a href="#i1-s">さ</a></p>
-              <p><a href="#i1-t">た</a></p>
-              <p><a href="#i1-n">な</a></p>
-              <p><a href="#i1-h">は</a></p>
-              <p><a href="#i1-m">ま</a></p>
-              <p><a href="#i1-y">や</a></p>
-              <p><a href="#i1-r">ら</a></p>
-              <p><a href="#i1-w">わ</a></p>
+              <p class="btn"><a href="#i1-a">あ</a></p>
+              <p class="btn"><a href="#i1-k">か</a></p>
+              <p class="btn"><a href="#i1-s">さ</a></p>
+              <p class="btn"><a href="#i1-t">た</a></p>
+              <p class="btn"><a href="#i1-n">な</a></p>
+              <p class="btn"><a href="#i1-h">は</a></p>
+              <p class="btn"><a href="#i1-m">ま</a></p>
+              <p class="btn"><a href="#i1-y">や</a></p>
+              <p class="btn"><a href="#i1-r">ら</a></p>
+              <p class="btn"><a href="#i1-w">わ</a></p>
               <p class="kome">※頭文字1文字のみの並び替え。濁点や半濁点は除いている。</p>
             </div>
             <div class="pl-btn short-btn">
-              <p><a href="#i1-1">1PL</a></p>
-              <p><a href="#i1-2">2PL</a></p>
-              <p><a href="#i1-3">3PL</a></p>
-              <p><a href="#i1-4">4PL</a></p>
-              <p><a href="#i1-5">5PL</a></p>
+              <p class="btn"><a href="#i1-1">1PL</a></p>
+              <p class="btn"><a href="#i1-2">2PL</a></p>
+              <p class="btn"><a href="#i1-3">3PL</a></p>
+              <p class="btn"><a href="#i1-4">4PL</a></p>
+              <p class="btn"><a href="#i1-5">5PL</a></p>
               <p class="kome">※セッション時の人数</p>
             </div>
           
