--- a/home.html
+++ b/home.html
@@ -96,26 +96,26 @@
             </ul>
           
             <div id="kasira-list">
-              <h3>あ</h3>
-              <div id="i1-a"></div>
-              <h3>か</h3>
-              <div id="i1-k"></div>
-              <h3>さ</h3>
-              <div id="i1-s"></div>
-              <h3>た</h3>
-              <div id="i1-t"></div>
-              <h3>な</h3>
-              <div id="i1-n"></div>
-              <h3>は</h3>
-              <div id="i1-h"></div>
-              <h3>ま</h3>
-              <div id="i1-m"></div>
-              <h3>や</h3>
-              <div id="i1-y"></div>
-              <h3>ら</h3>
-              <div id="i1-r"></div>
-              <h3>わ</h3>
-              <div id="i1-w"></div>
+              <h3 id="i1-a">あ</h3>
+              <div id="i1-a-list"></div>
+              <h3 id="i1-k">か</h3>
+              <div id="i1-k-list"></div>
+              <h3 id="i1-s">さ</h3>
+              <div id="i1-s-list"></div>
+              <h3 id="i1-t">た</h3>
+              <div id="i1-t-list"></div>
+              <h3 id="i1-n">な</h3>
+              <div id="i1-n-list"></div>
+              <h3 id="i1-h">は</h3>
+              <div id="i1-h-list"></div>
+              <h3 id="i1-m">ま</h3>
+              <div id="i1-m-list"></div>
+              <h3 id="i1-y">や</h3>
+              <div id="i1-y-list"></div>
+              <h3 id="i1-r">ら</h3>
+              <div id="i1-r-list"></div>
+              <h3 id="i1-w">わ</h3>
+              <div id="i1-w-list"></div>
             </div>
           
             <div id="scenario-list">
