--- a/home.html
+++ b/home.html
@@ -69,16 +69,16 @@
         <div class="list">
             <h2 id="i1">シナリオ一覧</h2>
             <div class="kasira-btn short-btn">
-              <p class="btn"><a href="#i1-a">あ</a></p>
-              <p class="btn"><a href="#i1-k">か</a></p>
-              <p class="btn"><a href="#i1-s">さ</a></p>
-              <p class="btn"><a href="#i1-t">た</a></p>
-              <p class="btn"><a href="#i1-n">な</a></p>
-              <p class="btn"><a href="#i1-h">は</a></p>
-              <p class="btn"><a href="#i1-m">ま</a></p>
-              <p class="btn"><a href="#i1-y">や</a></p>
-              <p class="btn"><a href="#i1-r">ら</a></p>
-              <p class="btn"><a href="#i1-w">わ</a></p>
+              <a href="#i1-a" class="btn"><p>あ</p></a>
+              <a href="#i1-k" class="btn"><p>か</p></a>
+              <a href="#i1-s" class="btn"><p>さ</p></a>
+              <a href="#i1-t" class="btn"><p>た</p></a>
+              <a href="#i1-n" class="btn"><p>な</p></a>
+              <a href="#i1-h" class="btn"><p>は</p></a>
+              <a href="#i1-m" class="btn"><p>ま</p></a>
+              <a href="#i1-y" class="btn"><p>や</p></a>
+              <a href="#i1-r" class="btn"><p>ら</p></a>
+              <a href="#i1-w" class="btn"><p>わ</p></a>
               <p class="kome">※頭文字1文字のみの並び替え。濁点や半濁点は除いている。</p>
             </div>
             <div class="pl-btn short-btn">
