--- a/home.html
+++ b/home.html
@@ -95,27 +95,47 @@
                 <li><a href="scenario/Hatenite.html">果てにて</a></li>
             </ul>
           
-            <div id="kasira-list">
-              <h3 id="i1-a">あ</h3>
-              <div id="i1-a-list"></div>
-              <h3 id="i1-k">か</h3>
-              <div id="i1-k-list"></div>
-              <h3 id="i1-s">さ</h3>
-              <div id="i1-s-list"></div>
-              <h3 id="i1-t">た</h3>
-              <div id="i1-t-list"></div>
-              <h3 id="i1-n">な</h3>
-              <div id="i1-n-list"></div>
-              <h3 id="i1-h">は</h3>
-              <div id="i1-h-list"></div>
-              <h3 id="i1-m">ま</h3>
-              <div id="i1-m-list"></div>
-              <h3 id="i1-y">や</h3>
-              <div id="i1-y-list"></div>
-              <h3 id="i1-r">ら</h3>
-              <div id="i1-r-list"></div>
-              <h3 id="i1-w">わ</h3>
-              <div id="i1-w-list"></div>
+            <div class="kasira-lists">
+              <div class="kasira-list">
+                <h3 id="i1-a">あ</h3>
+                <div id="i1-a-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-k">か</h3>
+                <div id="i1-k-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-s">さ</h3>
+                <div id="i1-s-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-t">た</h3>
+                <div id="i1-t-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-n">な</h3>
+                <div id="i1-n-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-h">は</h3>
+                <div id="i1-h-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-m">ま</h3>
+                <div id="i1-m-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-y">や</h3>
+                <div id="i1-y-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-r">ら</h3>
+                <div id="i1-r-list"></div>
+              </div>
+              <div class="kasira-list">
+                <h3 id="i1-w">わ</h3>
+                <div id="i1-w-list"></div>
+              </div>   
             </div>
           
         </div>
