--- a/scenario/Hatenite.html
+++ b/scenario/Hatenite.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="items">
-        <div class="item">
+        <div class="item-top">
             <table>
                 <tr>
                     <th>シナリオ作成者</th> <td><p id="maker"></p></td>
