--- a/character/manager/Nefrit.html
+++ b/character/manager/Nefrit.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="../../animation.js"></script>
    
     <link rel="stylesheet" href="../../home.css">
+    <link rel="stylesheet" href="../character.css">
   </head>
   <body>
 
