--- a/member/manager.html
+++ b/member/manager.html
@@ -14,6 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
     <link rel="stylesheet" href="../home.css">
+    <link rel="stylesheet" href="member.css">
   </head>
   <body>
 
