--- a/home.html
+++ b/home.html
@@ -29,6 +29,18 @@
                 <div class="home-index">
                   <ul>
                     <li><a href="home.html#i1">シナリオ一覧</a></li>
+                      <ul class="li1">
+                          <li><a href="home.html#i1-a">あ</a></li>
+                          <li><a href="home.html#i1-k">か</a></li>
+                          <li><a href="home.html#i1-s">さ</a></li>
+                          <li><a href="home.html#i1-t">た</a></li>
+                          <li><a href="home.html#i1-n">な</a></li>
+                          <li><a href="home.html#i1-h">は</a></li>
+                          <li><a href="home.html#i1-m">ま</a></li>
+                          <li><a href="home.html#i1-y">や</a></li>
+                          <li><a href="home.html#i1-r">ら</a></li>
+                          <li><a href="home.html#i1-w">わ</a></li>
+                       </ul>
                     <li><a href="home.html#i2">キャラクター一覧</a></li>
                        <ul class="li2">
                           <li><a href="home.html#i2d">運転手</a></li>
@@ -82,11 +94,11 @@
               <p class="kome">※頭文字1文字のみの並び替え。濁点や半濁点は除いている。</p>
             </div>
             <div class="pl-btn short-btn">
-              <p class="btn"><a href="#i1-1">1PL</a></p>
-              <p class="btn"><a href="#i1-2">2PL</a></p>
-              <p class="btn"><a href="#i1-3">3PL</a></p>
-              <p class="btn"><a href="#i1-4">4PL</a></p>
-              <p class="btn"><a href="#i1-5">5PL</a></p>
+              <a href="#i1-1" class="btn"><p>1PL</p></a>
+              <a href="#i1-2" class="btn"><p>2PL</p></a>
+              <a href="#i1-3" class="btn"><p>3PL</p></a>
+              <a href="#i1-4" class="btn"><p>4PL</p></a>
+              <a href="#i1-5" class="btn"><p>5PL</p></a>
               <p class="kome">※セッション時の人数</p>
             </div>
           
