--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                 <div class="home-index">
                   <ul>
                     <li><a href="home.html#i1">シナリオ一覧</a></li>
-                      <ul class="li1">
+                      <ul class="menu-li1">
                           <li><a href="home.html#i1-a">あ</a></li>
                           <li><a href="home.html#i1-k">か</a></li>
                           <li><a href="home.html#i1-s">さ</a></li>
@@ -40,9 +40,17 @@
                           <li><a href="home.html#i1-y">や</a></li>
                           <li><a href="home.html#i1-r">ら</a></li>
                           <li><a href="home.html#i1-w">わ</a></li>
-                       </ul>
+                      </ul>
+                      <ul class="menu-li1">
+                          <li><a href="home.html#i1-1">1PL</a></li>
+                          <li><a href="home.html#i1-2">2PL</a></li>
+                          <li><a href="home.html#i1-3">3PL</a></li>
+                          <li><a href="home.html#i1-4">4PL</a></li>
+                          <li><a href="home.html#i1-5">5PL</a></li>
+                          <li><a href="home.html#i1-6">6PL～</a></li>
+                      </ul>
                     <li><a href="home.html#i2">キャラクター一覧</a></li>
-                       <ul class="li2">
+                       <ul class="menu-li2">
                           <li><a href="home.html#i2d">運転手</a></li>
                           <li><a href="home.html#i2m">管理人</a></li>
                           <li><a href="home.html#i2b">上司</a></li>
@@ -99,6 +107,7 @@
               <a href="#i1-3" class="btn"><p>3PL</p></a>
               <a href="#i1-4" class="btn"><p>4PL</p></a>
               <a href="#i1-5" class="btn"><p>5PL</p></a>
+              <a href="#i1-6" class="btn"><p>6PL～</p></a>
               <p class="kome">※セッション時の人数</p>
             </div>
           
