--- a/home.html
+++ b/home.html
@@ -159,6 +159,33 @@
               </div>   
             </div>
           
+          <div class="pl-lists">
+              <div class="pl-list-1">
+                <h3 id="i1-1">1PL</h3>
+                <div id="i1-1-list"></div>
+              </div>
+              <div class="pl-list-2">
+                <h3 id="i1-2">2PL</h3>
+                <div id="i1-2-list"></div>
+              </div>
+              <div class="pl-list-3">
+                <h3 id="i1-3">3PL</h3>
+                <div id="i1-3-list"></div>
+              </div>
+              <div class="pl-list-4">
+                <h3 id="i1-4">4PL</h3>
+                <div id="i1-4-list"></div>
+              </div>
+              <div class="pl-list-5">
+                <h3 id="i1-5">5PL</h3>
+                <div id="i1-5-list"></div>
+              </div>
+              <div class="pl-list-6">
+                <h3 id="i1-6">6PL</h3>
+                <div id="i1-6-list"></div>
+              </div>
+            </div>
+          
         </div>
 
         <div class="list">
