--- a/home.html
+++ b/home.html
@@ -69,9 +69,21 @@
     <div class="topper">
       <h1 class="topper-title">独り言卓</h1>
       <div class="index">
-          <ul>
-              <li class="li1"><a href="#i1">シナリオ一覧</a></li>
-              <li class="li1"><a href="#i2">キャラクター一覧</a></li>
+          <ul id="page-link">
+              <li class="li1 sce-list"><a href="#i1">シナリオ一覧</a></li>
+                 <ul>
+                    <li><a href="#i1-a">あ</a></li>
+                    <li><a href="#i1-k">か</a></li>
+                    <li><a href="#i1-s">さ</a></li>
+                    <li><a href="#i1-t">た</a></li>
+                    <li><a href="#i1-n">な</a></li>
+                    <li><a href="#i1-h">は</a></li>
+                    <li><a href="#i1-m">ま</a></li>
+                    <li><a href="#i1-y">や</a></li>
+                    <li><a href="#i1-r">ら</a></li>
+                    <li><a href="#i1-w">わ</a></li>
+                 </ul>
+              <li class="li1 cha-list"><a href="#i2">キャラクター一覧</a></li>
                  <ul>
                     <li><a href="#i2d">運転手</a></li>
                     <li><a href="#i2m">管理人</a></li>
