--- a/home.html
+++ b/home.html
@@ -284,7 +284,7 @@
         <img class="footer-logo" src="footer-logo1.gif">
       </div>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="animation.js"></script>
     <script type="text/javascript" src="home.js"></script>
   </body>
