--- a/home.html
+++ b/home.html
@@ -35,6 +35,8 @@
                           <li><a href="home.html#i1-s">さ</a></li>
                           <li><a href="home.html#i1-t">た</a></li>
                           <li><a href="home.html#i1-n">な</a></li>
+                      </ul>
+                      <ul class="menu-li1">
                           <li><a href="home.html#i1-h">は</a></li>
                           <li><a href="home.html#i1-m">ま</a></li>
                           <li><a href="home.html#i1-y">や</a></li>
@@ -45,6 +47,8 @@
                           <li><a href="home.html#i1-1">1PL</a></li>
                           <li><a href="home.html#i1-2">2PL</a></li>
                           <li><a href="home.html#i1-3">3PL</a></li>
+                      </ul>
+                      <ul class="menu-li1">
                           <li><a href="home.html#i1-4">4PL</a></li>
                           <li><a href="home.html#i1-5">5PL</a></li>
                           <li><a href="home.html#i1-6">6PL～</a></li>
