--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                           <li><a href="home.html#i1-r">ら</a></li>
                           <li><a href="home.html#i1-w">わ</a></li>
                       </ul>
-                      <ul class="menu-li1">
+                      <ul class="menu-li1" id="pl-blank">
                           <li><a href="home.html#i1-1">1PL</a></li>
                           <li><a href="home.html#i1-2">2PL</a></li>
                           <li><a href="home.html#i1-3">3PL</a></li>
@@ -74,8 +74,8 @@
       <h1 class="topper-title">独り言卓</h1>
       <div class="index">
           <ul id="page-link">
-              <li class="li1 sce-list"><a href="#i1">シナリオ一覧</a></li>
-                 <ul>
+              <li class="li1"><a href="#i1">シナリオ一覧</a></li>
+                 <ul class="sce-list">
                     <li><a href="#i1-a">あ</a></li>
                     <li><a href="#i1-k">か</a></li>
                     <li><a href="#i1-s">さ</a></li>
