--- a/home.html
+++ b/home.html
@@ -30,26 +30,26 @@
                   <ul>
                     <li><a href="home.html#i1">シナリオ一覧</a></li>
                       <ul class="menu-li1">
-                          <li><a href="home.html#i1-a">あ</a></li>
+                          <li><a href="home.html#i1-a" class="sentou">あ</a></li>
                           <li><a href="home.html#i1-k">か</a></li>
                           <li><a href="home.html#i1-s">さ</a></li>
                           <li><a href="home.html#i1-t">た</a></li>
                           <li><a href="home.html#i1-n">な</a></li>
                       </ul>
                       <ul class="menu-li1">
-                          <li><a href="home.html#i1-h">は</a></li>
+                          <li><a href="home.html#i1-h" class="sentou">は</a></li>
                           <li><a href="home.html#i1-m">ま</a></li>
                           <li><a href="home.html#i1-y">や</a></li>
                           <li><a href="home.html#i1-r">ら</a></li>
                           <li><a href="home.html#i1-w">わ</a></li>
                       </ul>
                       <ul class="menu-li1" id="pl-blank">
-                          <li><a href="home.html#i1-1">1PL</a></li>
+                          <li><a href="home.html#i1-1" class="sentou">1PL</a></li>
                           <li><a href="home.html#i1-2">2PL</a></li>
                           <li><a href="home.html#i1-3">3PL</a></li>
                       </ul>
                       <ul class="menu-li1">
-                          <li><a href="home.html#i1-4">4PL</a></li>
+                          <li><a href="home.html#i1-4" class="sentou">4PL</a></li>
                           <li><a href="home.html#i1-5">5PL</a></li>
                           <li><a href="home.html#i1-6">6PL～</a></li>
                       </ul>
