--- a/home.html
+++ b/home.html
@@ -28,41 +28,41 @@
                 <span class="fa fa-bars menu-icon back"></span>
                 <div class="home-index">
                   <ul>
-                    <li><a href="home.html#i1">シナリオ一覧</a></li>
+                    <li><a href="#i1">シナリオ一覧</a></li>
                       <ul class="menu-li1">
-                          <li><a href="home.html#i1-a" class="sentou">あ</a></li>
-                          <li><a href="home.html#i1-k">か</a></li>
-                          <li><a href="home.html#i1-s">さ</a></li>
-                          <li><a href="home.html#i1-t">た</a></li>
-                          <li><a href="home.html#i1-n">な</a></li>
+                          <li><a href="#i1-a" class="sentou">あ</a></li>
+                          <li><a href="#i1-k">か</a></li>
+                          <li><a href="#i1-s">さ</a></li>
+                          <li><a href="#i1-t">た</a></li>
+                          <li><a href="#i1-n">な</a></li>
                       </ul>
                       <ul class="menu-li1">
-                          <li><a href="home.html#i1-h" class="sentou">は</a></li>
-                          <li><a href="home.html#i1-m">ま</a></li>
-                          <li><a href="home.html#i1-y">や</a></li>
-                          <li><a href="home.html#i1-r">ら</a></li>
-                          <li><a href="home.html#i1-w">わ</a></li>
+                          <li><a href="#i1-h" class="sentou">は</a></li>
+                          <li><a href="#i1-m">ま</a></li>
+                          <li><a href="#i1-y">や</a></li>
+                          <li><a href="#i1-r">ら</a></li>
+                          <li><a href="#i1-w">わ</a></li>
                       </ul>
                       <ul class="menu-li1" id="pl-blank">
-                          <li><a href="home.html#i1-1" class="sentou">1PL</a></li>
-                          <li><a href="home.html#i1-2">2PL</a></li>
-                          <li><a href="home.html#i1-3">3PL</a></li>
+                          <li><a href="#i1-1" class="sentou">1PL</a></li>
+                          <li><a href="#i1-2">2PL</a></li>
+                          <li><a href="#i1-3">3PL</a></li>
                       </ul>
                       <ul class="menu-li1">
-                          <li><a href="home.html#i1-4" class="sentou">4PL</a></li>
-                          <li><a href="home.html#i1-5">5PL</a></li>
-                          <li><a href="home.html#i1-6">6PL～</a></li>
+                          <li><a href="#i1-4" class="sentou">4PL</a></li>
+                          <li><a href="#i1-5">5PL</a></li>
+                          <li><a href="#i1-6">6PL～</a></li>
                       </ul>
-                    <li><a href="home.html#i2">キャラクター一覧</a></li>
+                    <li><a href="#i2">キャラクター一覧</a></li>
                        <ul class="menu-li2">
-                          <li><a href="home.html#i2d">運転手</a></li>
-                          <li><a href="home.html#i2m">管理人</a></li>
-                          <li><a href="home.html#i2b">上司</a></li>
-                          <li><a href="home.html#i2s">スピリチュアルな存在。</a></li>
-                          <li><a href="home.html#i2w">戦犯</a></li>
-                          <li><a href="home.html#i2c">創造主</a></li>
+                          <li><a href="#i2d">運転手</a></li>
+                          <li><a href="#i2m">管理人</a></li>
+                          <li><a href="#i2b">上司</a></li>
+                          <li><a href="#i2s">スピリチュアルな存在。</a></li>
+                          <li><a href="#i2w">戦犯</a></li>
+                          <li><a href="#i2c">創造主</a></li>
                        </ul>
-                    <li><a href="home.html#i3">独り言卓メンバー一覧</a></li>
+                    <li><a href="#i3">独り言卓メンバー一覧</a></li>
                   </ul>
                 </div>
             </div>
