--- a/member/manager.html
+++ b/member/manager.html
@@ -21,7 +21,7 @@
     <header>
         <div class="header-container">
             <div class="header-left">
-              <a href="../home.html"><img class="logo" src="header-logo1.gif"></a>
+              <a href="../home.html"><img class="logo" src="../header-logo1.gif"></a>
             </div>
             <div class="menu">
                 <span class="fa fa-bars menu-icon front"></span>
