--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     <header>
         <div class="header-container">
             <div class="header-left">
-              <a href="home.html"><img class="logo" src="header-logo1.gif"></a>
+              <a href="home.html"><img class="logo" src="header-logo.webp"></a>
             </div>
             <div class="menu">
                 <span class="fa fa-bars menu-icon front"></span>
@@ -285,7 +285,7 @@
 
     <footer>
       <div>
-        <img class="footer-logo" src="footer-logo1.gif">
+        <img class="footer-logo" src="footer-logo.webp">
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
