--- a/character/manager/Nefrit.html
+++ b/character/manager/Nefrit.html
@@ -23,7 +23,7 @@
     <header>
         <div class="header-container">
             <div class="header-left">
-                <a href="../../home.html"><img class="logo" src="../../header-logo1.gif"></a>
+                <a href="../../home.html"><img class="logo" src="../../header-logo.webp"></a>
             </div>
             <div class="menu">
                 <span class="fa fa-bars menu-icon front"></span>
@@ -146,7 +146,7 @@
 
     <footer>
       <div>
-        <img class="footer-logo" src="../../footer-logo1.gif">
+        <img class="footer-logo" src="../../footer-logo.webp">
       </div>
     </footer>
 
